Remaster Folia support with better region-access blockades and management